--- a/Ballerina.toml
+++ b/Ballerina.toml
@@ -1,6 +1,6 @@
 [package]
-org = "org9n3qj"
-name = "hello_world"
+org = "orgniluka0617newruntime"
+name = "asgardeocallchoreo"
 version = "0.1.0"
 distribution = "2201.3.5"
 
