--- a/Ballerina.toml
+++ b/Ballerina.toml
@@ -1,5 +1,5 @@
 [package]
-org = "orgniluka0617newruntime"
+org = "orgnilukastgit"
 name = "asgardeocallchoreo"
 version = "0.1.0"
 distribution = "2201.3.5"
